[project]
name = "decisiontrees"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.50",
    "xgboost>=3.1.3",
]

[tool.uv]
prerelease = "allow"
constraint-dependencies = [
    "numba>=0.60",
    "llvmlite>=0.43",
]
